k8s/monitoring/uptime-kuma/manifests/base/loadBalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-lb
  namespace: kuma-ns
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 80
      targetPort: 3001
  type: LoadBalancer
  loadBalancerIP: 192.168.51.99
